backend/characterimage/config/overlays/prod/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: character-image-db
spec:
  selector:
    matchLabels:
      app: character-image-db
  template:
    metadata:
      labels:
        app: character-image-db
    spec:
      containers:
      - name: character-image-db
        image: postgres:14.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5432
            name: psql-port
