backend/characterimage/config/overlays/prod/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: character-image-http
  labels:
    name: character-image-http
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: character-image
            port: 
              number: 8888
